Iterator removed. Added sorting history.