@@ -4,8 +4,7 @@ package pl.polsl.sortingvisualizer;
  * @author qooboos
  */
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Iterator;
+import java.util.List;
 
 import pl.polsl.sortingvisualizer.model.*;
 import pl.polsl.sortingvisualizer.view.*;
@@ -15,25 +14,21 @@ public class SortingVisualizer {
 
     public static void main(String[] args) {
 
-        //Model model = new Model();
-        //Controller controller = new Controller();
+        Controller controller = new Controller();
         View view = new View();
-        
-        view.PrintMenu();
-        int choice = Controller.GetChoice();
 
-        ArrayList<Integer> array = new ArrayList<Integer>(Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 0));
-        Iterator<Integer> it = array.iterator();
-        
+        ArrayList<Integer> array = new ArrayList<Integer>(List.of(6, 2, 3, 1));
+      
+        view.printMenu();
+        Integer choice = controller.getChoice();
+
         if (choice == 1) {
             SortingAlgorithm sortingAlgorithm = new BubbleSort();
-            //sortingAlgorithm.Sort(array);
-            //view.PrintArrayWithIterators(array, it);
+            SortingInfo sortingInfo = new SortingInfo(array, sortingAlgorithm);
+            sortingAlgorithm.sort(array, sortingInfo);
             
-            while(it.hasNext()) {
-                view.PrintArrayWithIterators(array, it);
-                sortingAlgorithm.Sort(array, it);
-            }
+            view.printAllIterations(sortingInfo);
         }
+        //view.printArray(array);
     }
 }
